# analisador-fundamentalista-ibovespa

./: .gitignore  Dockerfile  Makefile  Pipfile  Procfile  README.md  bitbucket-pipelines.yml  docker-compose-dev.yml  docker-compose-scrap.yml  docker-compose.api.yml  docker-compose.scrap.yml  docker-compose.yml  env  pyproject.toml  requirements.txt
api/: Dockerfile  Makefile  env  requirements.txt
api/app/application/: averages.py  db.py  financial.py  historical.py  lucros.py  magic.py  magic_formula.py  sectors.py  stocks.py  technical.py  utils.py  valida.py
api/config/: config.py  databases.py  production.yml  staging.yml
api/db/: orm.py
app/: __main__.py  analise.py  app.py  chupa_cabra.py  db.py  fundamentus.py  graham.py  magic.py  magic_formula.py  main.py  status.py
app/app/: app.py  chupa_cabra.py  db.py  graham.py  log.py  magic.py  server.py  status.py  waitingbar.py
app/app/queries/: insert_dre.sql  select_pl_small_caps.sql  select_roic_small_caps.sql  select_score.sql  update_dre.sql
app/database/: fund.db
app/queries/: create_table_detalhamento_historico.sql  create_table_fundamentus.sql  insert_fundamentus.sql  select_detalhes_stock.sql  select_ev_ebit.sql  select_ev_ebit_small_caps.sql  select_pl.sql  select_pl_geral_bolsa.sql  select_pl_setor.sql  select_pl_small_caps.sql  select_roe.sql  select_roe_small_caps.sql  select_roic.sql  select_roic_small_caps.sql
app/reports/: db.py
grafana/: .env  env
grafana/dashboards/: dashboards.txt  modelo.json
grafana/database/: grafana.db
grafana/provisioning/dashboards/: analise.json  dashboards.yml
grafana/provisioning/datasources/: datasource.yml
job/: Dockerfile  env  requirements.txt
job/scrap/: chupa_cabra.py  db.py  recommendation.py  scrap.py  status.py  stocks.py  technical.py
rapina/reports/: .~lock.BB_SEGURIDADE_PARTICIPAÇÕES_S.A.xlsx#  .~lock.PORTO_SEGURO_S.A.xlsx#  BB_SEGURIDADE_PARTICIPAÇÕES_S.A.xlsx  PORTO_SEGURO_S.A.xlsx  WIZ_SOLUÇÕES_E_CORRETAGEM_DE_SEGUROS_S.A.xlsx
(+42 files in other folders)
