[tool.poetry]
name = "poetry install"
version = "0.1.0"
description = ""
authors = ["Johnny Tardin <johnny.tardin@olist.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipdb = "^0.13.7"
deepdiff = "^5.3.0"
pytest = "5.0.1"
urllib3 = "1.24.1"
requests = "^2.25.1"
json-logging = "1.2.0"
PyYAML = "5.1.1"
Flask = "1.0.3"
Flask-API = "1.1"
Flask-Cors = "3.0.8"
flask-restplus = "0.12.1"
gunicorn = "19.9.0"
Werkzeug = "0.16.1"
eventlet = "0.25.0"
numpy = "^1.20.2"
pandas = "0.25.3"
investpy = "^1.0.6"
psycopg2-binary = "^2.8.6"
pendulum = "^2.1.2"
python-decouple = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
