[tool.poetry]
name = "analisador-fundamentalista-ibovespa"
version = "0.1.0"
description = ""
authors = ["Johnny Tardin <johnny.tardin@olist.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.7b0"
isort = "^5.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
