[tool.poetry]
name = "analisador-fundamentalista-ibovespa"
version = "0.1.0"
description = ""
authors = ["Johnny Tardin <johnny.tardin@olist.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.7b0"
isort = "^5.9.3"
gunicorn = {extras = ["gevent"], version = "^20.1.0"}
json-logging = "^1.3.0"
ipdb = "^0.13.9"
deepdiff = "^5.5.0"
pytest = "^6.2.4"
urllib3 = "^1.26.6"
requests = "^2.26.0"
PyYAML = "^5.4.1"
Flask = "^2.0.1"
Flask-API = "^3.0.post1"
Flask-Cors = "^3.0.10"
Werkzeug = "^2.0.1"
eventlet = "^0.31.1"
numpy = "^1.21.1"
pandas = "^1.3.1"
investpy = "^1.0.7"
psycopg2-binary = "^2.9.1"
pendulum = "^2.1.2"
python-decouple = "^3.4"
flask-restx = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
